[project]
name = "zkverify-explorer-harvester"
version = "0.1.0"
authors = [
    { name="Polkascan"},
]
description = "Polkascan Harvester"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/polkascan/harvester"
"Bug Tracker" = "https://github.com/polkascan/harvester/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["/usr/src"]

[tool.pytest.ini_options]
pythonpath = "/usr/src"
addopts = [
    "--import-mode=importlib",
]